--- a/templates/_base.html
+++ b/templates/_base.html
@@ -9,59 +9,14 @@
     <link rel="apple-touch-icon" href="{% static 'images/ico/apple-icon-120.png' %}">
     <link href="https://fonts.googleapis.com/css?family=Montserrat:300,300i,400,400i,500,500i%7COpen+Sans:300,300i,400,400i,600,600i,700,700i" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="{% static 'css/vendors.css' %}">
-    <link rel="stylesheet" type="text/css" href="{% static 'vendors/css/charts/jquery-jvectormap-2.0.3.css' %}">
-    <link rel="stylesheet" type="text/css" href="{% static 'vendors/css/charts/morris.css' %}">
-    <link rel="stylesheet" type="text/css" href="{% static 'vendors/css/extensions/unslider.css' %}">
-    <link rel="stylesheet" type="text/css" href="{% static 'vendors/css/weather-icons/climacons.min.css' %}">
+    <link rel="stylesheet" type="text/css" href="{% static 'vendors/css/forms/spinner/jquery.bootstrap-touchspin.css' %}">
+    <link rel="stylesheet" type="text/css" href="{% static 'vendors/css/forms/icheck/icheck.css' %}">
+    <link rel="stylesheet" type="text/css" href="{% static 'vendors/css/forms/toggle/switchery.min.css' %}">
+    <link rel="stylesheet" type="text/css" href="{% static 'fonts/simple-line-icons/style.min.css' %}">
     <link rel="stylesheet" type="text/css" href="{% static 'css/app.css' %}">
     <link rel="stylesheet" type="text/css" href="{% static 'css/core/menu/menu-types/vertical-menu.css' %}">
-
-   
-    <link rel="stylesheet" type="text/css" href="{% static 'vendors/css/forms/toggle/switchery.min.css' %}">
+    <link rel="stylesheet" type="text/css" href="{% static 'css/plugins/forms/validation/form-validation.css' %}">
     <link rel="stylesheet" type="text/css" href="{% static 'css/plugins/forms/switch.css' %}">
-    <style>
-:root {
-  --loading-grey: #ededed;
-}
-
-
-
-
-
-.loading .image,
-.loading h42, .skeleton,
-.loading .description {
-  background-color: var(--loading-grey);
-  color: var(--loading-grey);
-  background: linear-gradient(
-    100deg,
-    rgba(255, 255, 255, 0) 40%,
-    rgba(255, 255, 255, .5) 50%,
-    rgba(255, 255, 255, 0) 60%
-  ) var(--loading-grey);
-  background-size: 200% 100%;
-  background-position-x: 180%;
-  animation: 1s loading ease-in-out infinite;
-}
-
-@keyframes loading {
-  to {
-    background-position-x: -20%;
-  }
-}
-
-.loading h42 {
-  min-height: 1.6rem;
-  border-radius: 4px;
-  animation-delay: .06s;
-}
-
-.loading .description {
-  
-  border-radius: 4px;
-  animation-delay: .06s;
-}
-    </style>
 </head>
 
 <body class="vertical-layout vertical-menu 2-columns   menu-expanded fixed-navbar" data-open="click"
@@ -134,25 +89,16 @@
     </script>
     <script src="{% static 'logic/routes.js' %}"></script>
     <script src="{% static 'vendors/js/vendors.min.js' %}" type="text/javascript"></script>
-    <script src="{% static 'vendors/js/extensions/jquery.knob.min.js' %}" type="text/javascript"></script>
-    <script src="{% static 'js/scripts/extensions/knob.js' %}" type="text/javascript"></script>
-    <script src="{% static 'vendors/js/charts/raphael-min.js' %}" type="text/javascript"></script>
-    <script src="{% static 'vendors/js/charts/morris.min.js' %}" type="text/javascript"></script>
-    <script src="{% static 'vendors/js/charts/jvector/jquery-jvectormap-2.0.3.min.js' %}" type="text/javascript"></script>
-    <script src="{% static 'vendors/js/charts/jvector/jquery-jvectormap-world-mill.js' %}" type="text/javascript"></script>
-    <script src="{% static 'data/jvector/visitor-data.js' %}" type="text/javascript"></script>
-    <script src="{% static 'vendors/js/charts/chart.min.js' %}" type="text/javascript"></script>
-    <script src="{% static 'vendors/js/charts/jquery.sparkline.min.js' %}" type="text/javascript"></script>
-    <script src="{% static 'vendors/js/extensions/unslider-min.js' %}" type="text/javascript"></script>
-    <link rel="stylesheet" type="text/css" href="{% static 'css/core/colors/palette-climacon.css' %}">
-    <link rel="stylesheet" type="text/css" href="{% static 'fonts/simple-line-icons/style.min.css' %}">
+    <script src="{% static 'vendors/js/forms/spinner/jquery.bootstrap-touchspin.js' %}" type="text/javascript"></script>
+    <script src="{% static 'vendors/js/forms/validation/jqBootstrapValidation.js' %}" type="text/javascript"></script>
+    <script src="{% static 'vendors/js/forms/icheck/icheck.min.js' %}" type="text/javascript"></script>
+    <script src="{% static 'vendors/js/forms/toggle/switchery.min.js' %}" type="text/javascript"></script>
     <script src="{% static 'js/core/app-menu.js' %}" type="text/javascript"></script>
     <script src="{% static 'js/core/app.js' %}" type="text/javascript"></script>
     <script src="{% static 'js/scripts/customizer.js' %}" type="text/javascript"></script>
-    {% comment %} <script src="{% static 'js/scripts/pages/dashboard-analytics.js' %}" type="text/javascript"></script> {% endcomment %}
     <script src="{% static 'vendors/js/forms/toggle/bootstrap-checkbox.min.js' %}" type="text/javascript"></script>
-    <script src="{% static 'vendors/js/forms/toggle/switchery.min.js' %}" type="text/javascript"></script>
     <script src="{% static 'js/scripts/forms/switch.js' %}" type="text/javascript"></script>
+    <script src="{% static 'js/scripts/forms/validation/form-validation.js' %}" type="text/javascript"></script>
     {% block page_scripts %}
     {% endblock %}
 </body>
