--- a/templates/systemadmin/components/sidenav.html
+++ b/templates/systemadmin/components/sidenav.html
@@ -32,24 +32,24 @@
                 <span>Others</span><i class=" ft-minus" data-toggle="tooltip" data-placement="right"
                     data-original-title="Others"></i>
             </li>
-            <li class=" nav-item"><a href="changelog.html"><i class="ft-file"></i><span class="menu-title"
-                        data-i18n="">Changelog</span></a>
-            </li>
-            <li class="disabled nav-item"><a href="#"><i class="ft-slash"></i><span class="menu-title"
-                        data-i18n="">Disabled Menu</span></a>
-            </li>
-            <li class=" nav-item"><a href="http://wordpressbusiness.top/"><i class="ft-life-buoy"></i><span
-                        class="menu-title" data-i18n="">Raise Support</span></a>
-            </li>
-            <li class=" nav-item">
-                <a href="http://wordpressbusiness.top/admin02/documentation/index.html"><i class="ft-folder"></i>
-                    <span class="menu-title" data-i18n="">Documentation</span>
-                </a>
+            <li class="{% if is_depts %} active {% endif %} nav-item">
+                <a href="{% url 'admin_departments' %}"><i class="fa fa-bookmark-o"></i><span class="menu-title" data-i18n="">Departments</span></a>
             </li>
 
             <li class="{% if is_settings %} active {% endif %} nav-item">
                 <a href="{% url 'admin_settings' %}"><i class="ft-settings"></i>
                     <span class="menu-title" data-i18n="">Settings</span>
+                </a>
+            </li>
+            <li class=" nav-item"><a href="#"><i class="ft-file"></i><span class="menu-title"
+                        data-i18n="">Changelog</span></a>
+            </li>
+            <li class=" nav-item"><a href="#"><i class="ft-life-buoy"></i><span class="menu-title"
+                        data-i18n="">Raise Support</span></a>
+            </li>
+            <li class=" nav-item">
+                <a href="#"><i class="ft-folder"></i>
+                    <span class="menu-title" data-i18n="">Documentation</span>
                 </a>
             </li>
         </ul>
