--- a/templates/_base.html
+++ b/templates/_base.html
@@ -17,6 +17,7 @@
     <link rel="stylesheet" type="text/css" href="{% static 'css/core/menu/menu-types/vertical-menu.css' %}">
     <link rel="stylesheet" type="text/css" href="{% static 'css/plugins/forms/validation/form-validation.css' %}">
     <link rel="stylesheet" type="text/css" href="{% static 'css/plugins/forms/switch.css' %}">
+    <link rel="stylesheet" type="text/css" href="{% static 'css/plugins/extensions/toastr.css' %}">
 </head>
 
 <body class="vertical-layout vertical-menu 2-columns   menu-expanded fixed-navbar" data-open="click"
@@ -99,6 +100,7 @@
     <script src="{% static 'vendors/js/forms/toggle/bootstrap-checkbox.min.js' %}" type="text/javascript"></script>
     <script src="{% static 'js/scripts/forms/switch.js' %}" type="text/javascript"></script>
     <script src="{% static 'js/scripts/forms/validation/form-validation.js' %}" type="text/javascript"></script>
+    <script src="{% static 'js/scripts/extensions/toastr.js' %}" type="text/javascript"></script>
     {% block page_scripts %}
     {% endblock %}
 </body>
