--- a/templates/systemadmin/pages/departments.html
+++ b/templates/systemadmin/pages/departments.html
@@ -25,7 +25,7 @@
                                         </div>
                                     </div>
                                     <div class="text-right">
-                                        <button type="submit" class="btn btn-success">Submit <i class="fa fa-thumbs-o-up position-right"></i></button>
+                                        <button type="submit" id="makeBTN" class="btn btn-success"><i id="BTNIcon" class="fa fa-save"></i> Save </button>
                                         <button type="reset" class="btn btn-danger">Reset <i class="fa fa-refresh position-right"></i></button>
                                     </div>
                                 </form>
@@ -45,10 +45,5 @@
 {% endblock %}
 
 {% block page_scripts %}
-    <script>
-        $('#make_department').submit(function (e) {
-            e.preventDefault();
-            alert('Worked')
-        })
-    </script>
+    <script src="{% static 'logic/admin/department.js' %}" type="text/javascript"></script>
 {% endblock %}
