--- a/templates/_base.html
+++ b/templates/_base.html
@@ -17,6 +17,7 @@
     <link rel="stylesheet" type="text/css" href="{% static 'css/core/menu/menu-types/vertical-menu.css' %}">
     <link rel="stylesheet" type="text/css" href="{% static 'css/plugins/forms/validation/form-validation.css' %}">
     <link rel="stylesheet" type="text/css" href="{% static 'css/plugins/forms/switch.css' %}">
+    <link rel="stylesheet" type="text/css" href="{% static 'vendors/css/extensions/toastr.css' %}">
     <link rel="stylesheet" type="text/css" href="{% static 'css/plugins/extensions/toastr.css' %}">
 </head>
 
@@ -90,6 +91,7 @@
     </script>
     <script src="{% static 'logic/routes.js' %}"></script>
     <script src="{% static 'vendors/js/vendors.min.js' %}" type="text/javascript"></script>
+    <script src="{% static 'vendors/js/extensions/toastr.min.js' %}" type="text/javascript"></script>
     <script src="{% static 'vendors/js/forms/spinner/jquery.bootstrap-touchspin.js' %}" type="text/javascript"></script>
     <script src="{% static 'vendors/js/forms/validation/jqBootstrapValidation.js' %}" type="text/javascript"></script>
     <script src="{% static 'vendors/js/forms/icheck/icheck.min.js' %}" type="text/javascript"></script>
@@ -100,7 +102,7 @@
     <script src="{% static 'vendors/js/forms/toggle/bootstrap-checkbox.min.js' %}" type="text/javascript"></script>
     <script src="{% static 'js/scripts/forms/switch.js' %}" type="text/javascript"></script>
     <script src="{% static 'js/scripts/forms/validation/form-validation.js' %}" type="text/javascript"></script>
-    <script src="{% static 'js/scripts/extensions/toastr.js' %}" type="text/javascript"></script>
+    
     {% block page_scripts %}
     {% endblock %}
 </body>
