--- a/templates/systemadmin/pages/departments.html
+++ b/templates/systemadmin/pages/departments.html
@@ -66,13 +66,45 @@
                                     <tr>
                                         <td>{{department.department}}</td>
                                         <td>{{department.created_by.firstname}} {{department.created_by.lastname}}</td>
-                                        <!-- <td>{{department.created_by.firstname}} {{province.created_by.lastname}}</td> -->
                                         <td>{{department.created_at}}</td>
                                         <td>
-                                            <a href="{{department.get_absolute_url}}"><i class="fa fa-eye"></i></a>
+                                            <a data-toggle="modal" data-target="#modal_{{department.public_key}}"><i class="fa fa-eye"></i></a>
                                     
                                         </td>
                                     </tr>
+                                    <div class="modal fade text-left" id="modal_{{department.public_key}}" tabindex="-1" role="dialog" aria-labelledby="myModalLabel1"
+                                        aria-hidden="true">
+                                        <div class="modal-dialog" role="document">
+                                            <div class="modal-content">
+                                                <div class="modal-header">
+                                                    <h4 class="modal-title" id="myModalLabel1">{{department.department}} Department</h4>
+                                                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                                                        <span aria-hidden="true">&times;</span>
+                                                    </button>
+                                                </div>
+                                                <form class="form-horizontal" novalidate id="update_department_{{department.public_key}}">
+                                                    <div class="modal-body">
+                                                        <div class="form-group">
+                                                            <h5>Department Name
+                                                                <span class="required">*</span>
+                                                            </h5>
+                                                            <div class="controls">
+                                                                <input type="text" name="department" id="department_{{department.public_key}}" value="{{department.department}}" class="form-control border-primary">
+                                                                <span class="red" id="error_msg" style="display: none;">This field is required</span>
+                                                            </div>
+                                                        </div>
+                                                    </div>
+                                                    <div class="modal-footer">
+                                                        <div class="text-right">
+                                                            <button type="button" id="{{department.public_key}}" class="btn btn-success" onClick="update_click(this.id)"><i id="BTNIcon_{{department.public_key}}" class="fa fa-save"></i> Save
+                                                            </button>
+                                                            <button type="reset" class="btn btn-danger" data-dismiss="modal">Close <i class="fa fa-refresh position-right"></i></button>
+                                                        </div>
+                                                    </div>
+                                                </form>
+                                            </div>
+                                        </div>
+                                    </div>
                                 {% endfor %}
                                 
                             </tbody>
