--- a/templates/systemadmin/pages/departments.html
+++ b/templates/systemadmin/pages/departments.html
@@ -56,6 +56,7 @@
                             <thead>
                                 <tr>
                                     <th>Name</th>
+                                    <th>No. of Members</th>
                                     <th>Created By</th>
                                     <th>Date Created</th>
                                     <th>Action</th>
@@ -65,6 +66,7 @@
                                 {% for department in depts %}
                                     <tr>
                                         <td>{{department.department}}</td>
+                                        <td>{{department.members}}</td>
                                         <td>{{department.created_by.firstname}} {{department.created_by.lastname}}</td>
                                         <td>{{department.created_at}}</td>
                                         <td>
@@ -98,7 +100,10 @@
                                                         <div class="text-right">
                                                             <button type="button" id="{{department.public_key}}" class="btn btn-success" onClick="update_click(this.id)"><i id="BTNIcon_{{department.public_key}}" class="fa fa-save"></i> Save
                                                             </button>
-                                                            <button type="reset" class="btn btn-danger" data-dismiss="modal">Close <i class="fa fa-refresh position-right"></i></button>
+                                                            {% if department.members == 0%}
+                                                                <button type="button" id="del_{{department.public_key}}" class="btn btn-danger" onClick="delete_click(this.id)">Delete <i id="del_BTNIcon_{{department.public_key}}" class="fa fa-trash position-right"></i></button>
+                                                            {% endif%}
+                                                            <button type="reset" class="btn btn-default" data-dismiss="modal">Close <i class="fa fa-close position-right"></i></button>
                                                         </div>
                                                     </div>
                                                 </form>
@@ -111,6 +116,7 @@
                             <tfoot>
                                 <tr>
                                     <th>Name</th>
+                                    <th>No. of Members</th>
                                     <th>Created By</th>
                                     <th>Date Created</th>
                                     <th>Action</th>
