--- a/templates/systemadmin/pages/departments.html
+++ b/templates/systemadmin/pages/departments.html
@@ -154,16 +154,22 @@
                 {
                     extend: 'excelHtml5',
                     exportOptions: {
-                        columns: [0, 1]
+                        columns: [0, 1, 2, 3]
                     }
                 },
                 {
                     extend: 'pdfHtml5',
                     exportOptions: {
-                        columns: [0, 1]
+                        columns: [0, 1, 2, 3]
                     }
                 },
-            ]
+            ],
+            "columnDefs": [
+                { "targets": [1, 2, 3, 4], "searchable": false }
+            ],
+            language: {
+                searchPlaceholder: "Search Departments"
+            }
         });
     </script>
 {% endblock %}
