--- a/templates/systemadmin/pages/createStaff.html
+++ b/templates/systemadmin/pages/createStaff.html
@@ -25,13 +25,13 @@
                                         <div class="col-md-6">
                                             <div class="form-group">
                                                 <label for="projectinput1">First Name</label>
-                                                <input type="text" id="projectinput1" class="form-control" placeholder="First Name" name="fname">
+                                                <input type="text" id="fname" class="form-control" placeholder="First Name" name="fname">
                                             </div>
                                         </div>
                                         <div class="col-md-6">
                                             <div class="form-group">
                                                 <label for="projectinput2">Last Name</label>
-                                                <input type="text" id="projectinput2" class="form-control" placeholder="Last Name" name="lname">
+                                                <input type="text" id="lname" class="form-control" placeholder="Last Name" name="lname">
                                             </div>
                                         </div>
                                     </div>
@@ -39,13 +39,14 @@
                                         <div class="col-md-6">
                                             <div class="form-group">
                                                 <label for="projectinput1">Cell Number</label>
-                                                <input type="text" id="projectinput1" class="form-control phone-inputmask" placeholder="Cell Number Starting With 260" name="fname">
+                                                <input type="text" id="cell" class="form-control phone-inputmask" placeholder="Cell Number Starting With 260" name="cell">
                                             </div>
                                         </div>
                                         <div class="col-md-6">
                                             <div class="form-group">
                                                 <label for="projectinput2">Email</label>
-                                                <input type="text" id="projectinput2" class="form-control email-inputmask" placeholder="Last Name" name="lname">
+                                                <input type="text" id="email" class="form-control email-inputmask" placeholder="Email" name="email" onkeyup="checkEmail()">
+                                                <span style="display:none" class="danger" id="email_error">Email already in use</span>
                                             </div>
                                         </div>
                                     </div>
@@ -53,17 +54,18 @@
                                         <div class="col-md-6">
                                             <div class="form-group">
                                                 <label for="projectinput1">Marital Status</label>
-                                                <select class="form-control" id="basicSelect">
+                                                <select class="form-control" id="marital_status">
                                                     <option>Select Option</option>
-                                                    <option>Married</option>
-                                                    <option>Single</option>
+                                                    <option value="Married">Married</option>
+                                                    <option value="Single">Single</option>
                                                 </select>
                                             </div>
                                         </div>
                                         <div class="col-md-6">
                                             <div class="form-group">
-                                                <label for="projectinput2">Username</label>
-                                                <input type="text" id="projectinput2" class="form-control email-inputmask" placeholder="Username" name="lname">
+                                                <label for="projectinput2">Username <span style="font-size: small;">(Minimum 5 characters)</span></label>
+                                                <input type="text" id="username" class="form-control" placeholder="Username" name="username" onkeyup="checkUsername()">
+                                                <span style="display:none" class="danger" id="username_error">Username already taken</span>
                                             </div>
                                         </div>
                                     </div>
@@ -72,7 +74,7 @@
                                         <div class="col-md-6">
                                             <div class="form-group">
                                                 <label for="projectinput1">Department</label>
-                                                <select class="form-control" id="basicSelect">
+                                                <select class="form-control" id="department">
                                                     <option>Select Option</option>
                                                     {% for department in departments %}
                                                         <option value="{{department.public_key}}">{{department.department}}</option>
@@ -83,7 +85,7 @@
                                         <div class="col-md-6">
                                             <div class="form-group">
                                                 <label for="projectinput1">User Role</label>
-                                                <select class="form-control" id="basicSelect">
+                                                <select class="form-control" id="role">
                                                     <option>Select Option</option>
                                                     <option value="System Admin">System Admin</option>
                                                 </select>
@@ -110,5 +112,5 @@
 {% endblock %}
 
 {% block page_scripts %}
-
+    <script src="{% static 'logic/admin/createStaff.js' %}" type="text/javascript"></script>
 {% endblock %}
