--- a/templates/systemadmin/pages/createStaff.html
+++ b/templates/systemadmin/pages/createStaff.html
@@ -19,19 +19,19 @@
                         </div>
                         <div class="card-content collapse show">
                             <div class="card-body">
-                                <form class="form-horizontal" novalidate id="make_department">
+                                <form class="form-horizontal" novalidate id="memeber_staff">
                                     <h4 class="form-section"><i class="ft-user"></i> Personal Info</h4>
                                     <div class="row">
                                         <div class="col-md-6">
                                             <div class="form-group">
-                                                <label for="projectinput1">First Name</label>
-                                                <input type="text" id="fname" class="form-control" placeholder="First Name" name="fname">
+                                                <label for="projectinput1">First Name<span style="font-size: small;" class="danger">*</span></label>
+                                                <input type="text" name="fname" id="fname" class="form-control" placeholder="First Name" required/>
                                             </div>
                                         </div>
                                         <div class="col-md-6">
                                             <div class="form-group">
-                                                <label for="projectinput2">Last Name</label>
-                                                <input type="text" id="lname" class="form-control" placeholder="Last Name" name="lname">
+                                                <label for="projectinput2">Last Name<span style="font-size: small;" class="danger">*</span></label>
+                                                <input type="text" id="lname" class="form-control" placeholder="Last Name" name="lname" required/>
                                             </div>
                                         </div>
                                     </div>
@@ -44,8 +44,8 @@
                                         </div>
                                         <div class="col-md-6">
                                             <div class="form-group">
-                                                <label for="projectinput2">Email</label>
-                                                <input type="text" id="email" class="form-control email-inputmask" placeholder="Email" name="email" onkeyup="checkEmail()">
+                                                <label for="projectinput2">Email<span style="font-size: small;" class="danger">*</span></label>
+                                                <input type="text" id="email" class="form-control email-inputmask" placeholder="Email" name="email" required onkeyup="checkEmail()"/>
                                                 <span style="display:none" class="danger" id="email_error">Email already in use</span>
                                             </div>
                                         </div>
@@ -53,9 +53,9 @@
                                     <div class="row">
                                         <div class="col-md-6">
                                             <div class="form-group">
-                                                <label for="projectinput1">Marital Status</label>
-                                                <select class="form-control" id="marital_status">
-                                                    <option>Select Option</option>
+                                                <label for="projectinput1">Marital Status<span style="font-size: small;" class="danger">*</span></label>
+                                                <select class="form-control" name="marital_status" id="marital_status" required>
+                                                    <option value="">Select Option</option>
                                                     <option value="Married">Married</option>
                                                     <option value="Single">Single</option>
                                                 </select>
@@ -63,8 +63,8 @@
                                         </div>
                                         <div class="col-md-6">
                                             <div class="form-group">
-                                                <label for="projectinput2">Username <span style="font-size: small;">(Minimum 5 characters)</span></label>
-                                                <input type="text" id="username" class="form-control" placeholder="Username" name="username" onkeyup="checkUsername()">
+                                                <label for="projectinput2">Username<span style="font-size: small;" class="danger">*</span> <span style="font-size: small;">(Minimum 5 characters)</span></label>
+                                                <input type="text" id="username" class="form-control" placeholder="Username" name="username" required onkeyup="checkUsername()"/>
                                                 <span style="display:none" class="danger" id="username_error">Username already taken</span>
                                             </div>
                                         </div>
@@ -73,9 +73,9 @@
                                     <div class="row">
                                         <div class="col-md-6">
                                             <div class="form-group">
-                                                <label for="projectinput1">Department</label>
-                                                <select class="form-control" id="department">
-                                                    <option>Select Option</option>
+                                                <label for="projectinput1">Department<span style="font-size: small;" class="danger">*</span></label>
+                                                <select class="form-control" name="department" id="department" required>
+                                                    <option value="">Select Option</option>
                                                     {% for department in departments %}
                                                         <option value="{{department.public_key}}">{{department.department}}</option>
                                                     {% endfor %}
@@ -84,9 +84,9 @@
                                         </div>
                                         <div class="col-md-6">
                                             <div class="form-group">
-                                                <label for="projectinput1">User Role</label>
-                                                <select class="form-control" id="role">
-                                                    <option>Select Option</option>
+                                                <label for="projectinput1">User Role<span style="font-size: small;" class="danger">*</span></label>
+                                                <select class="form-control" name="role" id="role" required>
+                                                    <option value="">Select Option</option>
                                                     <option value="System Admin">System Admin</option>
                                                 </select>
                                             </div>
