--- a/templates/_base.html
+++ b/templates/_base.html
@@ -119,7 +119,7 @@
     <script src="{% static 'vendors/js/forms/extended/maxlength/bootstrap-maxlength.js' %}" type="text/javascript"></script>
 
     <script>
-        $('.phone-inputmask').inputmask("(999) 999999999");
+        $('.phone-inputmask').inputmask("999999999999");
 
         $('.email-inputmask').inputmask({
             mask: "*{1,20}[.*{1,20}][.*{1,20}][.*{1,20}]@*{1,20}[*{2,6}][*{1,2}].*{1,}[.*{2,6}][.*{1,2}]",
